--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
   .heading {
     font-family: sans-serif;
     color: white;
+    font-size: 4rem;
   }
   
   .button-wrapper {
@@ -18,13 +19,41 @@
     margin-top: 20px;
   }
   
-  .button {
+/*   .button {
     background-color: transparent;
     border: 1px solid white;
     padding: 10px 20px;
     margin: 0 10px;
     cursor: pointer;
     color: white;
+  } */
+  button {
+    padding: 10px 20px;
+    margin: 0 10px 0 10px;
+    text-transform: uppercase;
+    border-radius: 8px;
+    font-size: 17px;
+    font-weight: 500;
+    color: #ffffff;
+    text-shadow: none;
+    background: transparent;
+    box-shadow: transparent;
+    border: 1px solid #ffffff;
+    transition: 0.5s ease;
+    user-select: none;
+  }
+  
+  #btn:hover {
+    color: #ffffff;
+    background: #008cff;
+    border: 1px solid #008cff;
+    text-shadow: 0 0 5px #ffffff,
+                0 0 10px #ffffff,
+                0 0 20px #ffffff;
+    box-shadow: 0 0 5px #008cff,
+                0 0 20px #008cff,
+                0 0 50px #008cff,
+                0 0 100px #008cff;
   }
 
   a{
