--- a/style.css
+++ b/style.css
@@ -1,24 +1,24 @@
 .text-box {
-    position: fixed;
-    top: 40%;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-  }
-  
-  .heading {
-    font-family: sans-serif;
-    color: white;
-    font-size: 4rem;
-  }
-  
-  .button-wrapper {
-    display: flex;
-    justify-content: center;
-    margin-top: 20px;
-  }
-  
+  position: fixed;
+  top: 40%;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+}
+
+.heading {
+  font-family: sans-serif;
+  color: white;
+  font-size: 4rem;
+}
+
+.button-wrapper {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+
 /*   .button {
     background-color: transparent;
     border: 1px solid white;
@@ -27,36 +27,61 @@
     cursor: pointer;
     color: white;
   } */
-  button {
-    padding: 10px 20px;
-    margin: 0 10px 0 10px;
-    text-transform: uppercase;
-    border-radius: 8px;
-    font-size: 17px;
-    font-weight: 500;
-    color: #ffffff;
-    text-shadow: none;
-    background: transparent;
-    box-shadow: transparent;
-    border: 1px solid #ffffff;
-    transition: 0.5s ease;
-    user-select: none;
-  }
+.button {
+  --color: #FFFFFF;
+  --color2: #6CB8F3;
+  padding: 0.8em 1.7em;
+  background-color: transparent;
+  border-radius: .3em;
+  position: relative;
+  overflow: hidden;
+  cursor: pointer;
+  transition: .5s;
+  font-weight: 400;
+  font-size: 17px;
+  border: 1px solid;
+  font-family: inherit;
+  text-transform: uppercase;
+  color: var(--color);
+  z-index: 1;
+  margin: 0 10px 0 10px;
   
-  #btn:hover {
-    color: #ffffff;
-    background: #008cff;
-    border: 1px solid #008cff;
-    text-shadow: 0 0 5px #ffffff,
-                0 0 10px #ffffff,
-                0 0 20px #ffffff;
-    box-shadow: 0 0 5px #008cff,
-                0 0 20px #008cff,
-                0 0 50px #008cff,
-                0 0 100px #008cff;
-  }
+}
 
-  a{
-    text-decoration: none;
-  }
-  
+.button::before,
+.button::after {
+  content: '';
+  display: block;
+  width: 50px;
+  height: 50px;
+  transform: translate(-50%, -50%);
+  position: absolute;
+  border-radius: 50%;
+  z-index: -1;
+  background-color: var(--color2);
+  transition: 1s ease;
+}
+
+.button::before {
+  top: -1em;
+  left: -1em;
+}
+
+.button::after {
+  left: calc(100% + 1em);
+  top: calc(100% + 1em);
+}
+
+.button:hover::before,
+.button:hover::after {
+  height: 410px;
+  width: 410px;
+}
+
+.button:active {
+  filter: brightness(.8);
+}
+
+a {
+  text-decoration: none;
+}
